--- a/public/Dashboard/Student.html
+++ b/public/Dashboard/Student.html
@@ -28,7 +28,7 @@
           <p>Prepare at your own pace with our full curriculum.</p>
         </a>
         <a class="tutor bubble">
-          <h2>On-on-One Tutoring</h2>
+          <h2>One-on-One Tutoring</h2>
           <p>Learn from our amazing tutors one-on-one to maximize your score.</p>
         </a>
       </main>
