--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -30,10 +30,17 @@
       <dropdown-search id="userSearch"></dropdown-search>
 
       <h2>Latest Users</h2>
-      <div id="latestControls">
+      <div id="latestControls" class="datagrid-controls">
         <button id="latestPrevious" class="hidden">Previous</button>
         <button id="latestNext">Next</button>
       </div>
-      <div id="latestUsers"></div>
+      <div id="latestUsers" class="datagrid"></div>
+
+      <h2>Program Students</h2>
+      <div id="programControls" class="datagrid-controls">
+        <button id="programPrevious" class="hidden">Previous</button>
+        <button id="programNext">Next</button>
+      </div>
+      <div id="programUsers" class="datagrid"></div>
     </section>
   </body>
