--- a/public/new-student.html
+++ b/public/new-student.html
@@ -33,6 +33,8 @@
     <input type="email" name="email" id="email" required>
     <label for="phoneNumber">Phone Number</label>
     <input type="tel" name="phoneNumber" id="phoneNumber">
+    <label for="isProgramStudent">Is the student paying for a program?</label>
+    <input type="checkbox" name="isProgramStudent" id="isProgramStudent">
     <p class="error">error message</p>
     <button id="action"><div class="loading-wrapper loading">Loading</div></button>
   </body>
