--- a/public/student-overview.html
+++ b/public/student-overview.html
@@ -33,6 +33,18 @@
           </div>
         </header>
         <section class="content">
+          <div id="hw-overview">
+            <div class="hw-header hw-grid">
+              <h3 class="header"></h3>
+              <h3 class="header">Composite</h3>
+              <h3 class="header">English</h3>
+              <h3 class="header">Math</h3>
+              <h3 class="header">Reading</h3>
+              <h3 class="header">Science</h3>
+            </div>
+            <div id="hw-wrapper" class="hw-grid">
+            </div>
+          </div>
         </section>
       </main>
     </div>
