only 1 test free

--- a/public/free-test-taker.html
+++ b/public/free-test-taker.html
@@ -19,10 +19,10 @@
     <section id="heading">
       <h1>Not Sure What to Expect From the ACT?</h1>
       <h2>
-        Get a better look at the at the ACT by trying it out for yourself! Get 2 free ACT tests today with instant results.
+        Get a better look at the ACT by trying it out for yourself! Get a free full length ACT test today with instant results.
         No paywall, No hassle, just find out exactly what you need to study to get a higher score!
       </h2>
-      <a href="sign-up.html">Get 2 free Tests!</a>
+      <a href="sign-up.html">Get a free test!</a>
     </section>
     <section id="summary">
       <h1>Worried about getting into college?</h1>
@@ -34,7 +34,7 @@
       <p>
         While the ACT isn't the only qualification to get into college, it can be a big deal for getting into your dream school.
         Getting a good score is just that much less stress on your plate, and that much more assurance that you'll get into your 
-        school! But in order to do that, you need to know what you don't know. So we're offering you 2 free ACT tests to tell you 
+        school! But in order to do that, you need to know what you don't know. So we're offering you a free full length ACT test to tell you 
         just that - where to improve.
       </p>
       <img src="Images/test-taker-girl.jpeg" alt="worried girl">
@@ -72,10 +72,10 @@
         </p>
       </div>
       <h3>
-        What are you waiting for? No paywalls and no hassle, just sign up for our free test taker today to get your 2 free ACT 
-        practice tests, and find out what it's really like.
+        What are you waiting for? No paywalls and no hassle, just sign up for our free test taker today to get your free ACT 
+        practice test, and find out what it's really like.
       </h3>
-      <a href="sign-up.html">Get 2 free Tests</a>
+      <a href="sign-up.html">Get a free test</a>
     </section>
   </main>
   <section id="about">
