--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
             <div class="content">
               <p>
                 With our custom test taker, you can practice ACT question right now.
-                Eveyone new students gets 2 free full length tests.
+                Eveyone new students gets a free full length test.
                 Each question has a comprehensive breakdown and has been labeled with its corresponding topic.
                 Review your tests with confidence knwoing that you'll be able to understand the questions you got wrong and which topics you can improve the most on.
                 
