--- a/email-templates/Student-Free.html
+++ b/email-templates/Student-Free.html
@@ -47,7 +47,7 @@
     </table>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Additionally, using the link below, you will have access to 2 FREE full length ACT tests! They will be broken into individual sections, so you can 
+            Additionally, using the link below, you will have access to FREE full length ACT tests! They will be broken into individual sections, so you can 
             take any section of the ACT independently of the others, or you can take them in succession to simulate an actual ACT test. The 
             best way to prepare for any test is to practice, practice, practice!
           </p>
@@ -58,7 +58,7 @@
           <table role="presentation" align="center" border="0" cellspacing="0">
             <tr>
               <td align="center" bgcolor="#27c03a" style="border-radius: .5em;">
-                <a style="font-size: 1em; text-decoration: none; color: white; padding: .5em 1em; border-radius: .5em; display: inline-block; border: 1px solid #27c03a;" href="https://lyrnwithus.com/test-taker?student=DraxgjjWuytGQ1ovKQbZ">2 Free ACT Tests</a>
+                <a style="font-size: 1em; text-decoration: none; color: white; padding: .5em 1em; border-radius: .5em; display: inline-block; border: 1px solid #27c03a;" href="https://lyrnwithus.com/test-taker?student=DraxgjjWuytGQ1ovKQbZ">Free ACT Test</a>
               </td>
             </tr>
           </table>
