--- a/public/why.html
+++ b/public/why.html
@@ -34,7 +34,7 @@
           </div>
           <div class="why-card">
             <h3>Affordable Options</h3>
-            <p> <a href="sign-up.html">Get started</a> with 2 free practice tests.</p>
+            <p> <a href="sign-up.html">Get started</a> with a free practice test.</p>
           </div>
           <div class="why-card">
             <h3>Transparent Pricing</h3>
