--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -29,17 +29,25 @@
       <h2>Users</h2>
       <dropdown-search id="userSearch"></dropdown-search>
 
-      <h2>Latest Users</h2>
-      <div id="latestControls" class="datagrid-controls">
-        <button id="latestPrevious" class="hidden">Previous</button>
-        <button id="latestNext">Next</button>
+      <br>
+
+      <div class="datagrid-header">
+        <h2>Latest Users</h2>
+        <div id="latestControls" class="datagrid-controls">
+          <div id="latestPrevious" class="button hidden previous"><div></div></div>
+          <div id="latestNext" class="button hidden next"><div></div></div>
+        </div>
       </div>
       <div id="latestUsers" class="datagrid"></div>
 
-      <h2>Program Students</h2>
-      <div id="programControls" class="datagrid-controls">
-        <button id="programPrevious" class="hidden">Previous</button>
-        <button id="programNext">Next</button>
+      <br>
+
+      <div class="datagrid-header">
+        <h2>Program Students</h2>
+        <div id="programControls" class="datagrid-controls">
+          <div id="programPrevious" class="button hidden previous"></div>
+          <div id="programNext" class="button hidden next"></div>
+        </div>
       </div>
       <div id="programUsers" class="datagrid"></div>
     </section>
