adjusted homework description

--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -247,7 +247,7 @@
           </ul>
         </details>
 
-        <details>
+        <!-- <details>
           <summary>Daily</summary>
           <p>
             These assignments are the first at home asssignment the student will complete after each session.
@@ -270,9 +270,9 @@
             <li>Submit the assignment</li>
             <li>Verify that the assignment was successfully saved on the test taker</li>
           </ul>
-        </details>
+        </details> -->
 
-        <details>
+        <!-- <details>
           <summary>Homework</summary>
           <p>
             These assignments are the second at home asssignment the student will complete after each session.
@@ -292,6 +292,34 @@
             <li>Set the "Open" time to a week from yesterday at midnight</li>
             <li>Set the "Close" time to 1 week after open at midnight</li>
             <li>Set the "Time" to 30</li>
+            <li>Select "Homework" for the topic</li>
+            <li>Submit the assignment</li>
+            <li>Verify that the assignment was successfully saved on the test taker</li>
+          </ul>
+        </details> -->
+
+        <details>
+          <summary>Homework</summary>
+          <p>
+            These assignments are the at home asssignment the student will complete before each session.
+            They will be assigned to be done a week after a session and due an hour before the next time that section is taught.
+            This is an entire test to best guage where the student is at and practice in a realistic setting.
+          </p>
+          <p>How to create</p>
+          <ul>
+            <li>Verify that the correct user is selected in the user box</li>
+            <li>Select generate assignment "by section"</li>
+            <li>Select the desired test (should assign one test within a two week period)</li>
+            <li>Select the desired section</li>
+            <li>Set the "Open" time to a week from today at midnight</li>
+            <li>Set the "Close" time to 2 weeks from now an hour before the lesson began</li>
+            <li>Set the "Time" to the appropriate time for each section</li>
+            <ul>
+              <li>English - 45</li>
+              <li>Math - 60</li>
+              <li>Reading - 35</li>
+              <li>Science - 35</li>
+            </ul>
             <li>Select "Homework" for the topic</li>
             <li>Submit the assignment</li>
             <li>Verify that the assignment was successfully saved on the test taker</li>
